deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: node-container-nautilus
          image: gcr.io/kodekloud/centos-ssh-enabled:node
          ports:
            - containerPort: 80
