nginx_pod_definition.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: po
  name: po
spec:
  containers:
  - image: nginx
    name: po
