pod_with_security_context_and_capabilities.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-sleeper
  namespace: default
spec:
  containers:
    - command:
        - sleep
        - "4800"
      image: ubuntu
      name: ubuntu-sleeper
      securityContext:   # cabalities can only be applied on container level not pod level
        capabilities:
          add: [ "SYS_TIME" ]
