static_pod.yaml

apiVersion: v1
kind: Pod
metadata:
  labels:
    app: fr
  name: static-busybox
spec:
  containers:
    - image: busybox
      name: busybox
      command: 
        - sleep
        - "1000"
