Nagios-deployment-on-cluster.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nagios-deployment
  labels:
    app: nagios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nagios
  template:
    metadata:
      labels:
        app: nagios
    spec:
      containers:
        - name: nagios-container
          image: jasonrivers/nagios
---
apiVersion: v1
kind: Service
metadata:
  name: nagios-service
  labels:
    app: nagios
spec:
  selector:
    app: nagios
  type: NodePort
  ports:
  - port: 80
    nodePort: 30008
    targetPort: 80
