nodeport.yml
apiVersion: v1
kind: Service
metadata:  
  name: myappservice
spec:
  selector:    
    app: my-app
  type: NodePort
  ports:  
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 30012
    protocol: TCP
